Add pagination for category
